Fixes some of the Timline arrow styles and spacing

--- a/src/components/Timeline.scss
+++ b/src/components/Timeline.scss
@@ -66,21 +66,31 @@
   background-color: lighten($red, 20%);
 }
 
-
 .vertical-timeline-element-content {
   border: 3px solid lighten($red, 20%);
   box-shadow: none;
   &.pulse {
     animation: pulseAnimate 1500ms 1500ms !important;
   }
-}
-.vertical-timeline-element-content:nth-of-type(odd) {
-  &::before {
-    border-left-color: lighten($red, 20%);
+  @media (min-width: 1170px) {
+    width: 45%!important;
   }
 }
+@media (min-width: 400px) {
+  .vertical-timeline-element-content {
+    &::before {
+      border-right-color: lighten($red, 20%);
+    }
+  }
+}
+.vertical-timeline-element-content {
+  &::before {
+    border-left-color: lighten($red, 20%) !important  ;
+  }
+}
+
 .vertical-timeline-element-content:nth-of-type(even) {
   &::before {
-    border-right-color: lighten($red, 20%);
+    border-right-color: lighten($red, 20%) !important;
   }
 }
